--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,9 +1,19 @@
 .card {
+    height: 300px;
+    width: 150px;
     padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 5px 0 #0002;
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100px;
+    justify-content: end;
+    flex-direction: column;
+    border-radius: 10px;
+    border: 1px solid #eee
+}
+
+.signs {
+    padding: 10px;
+    background-color: #0004;
+    width: 90%;
+    border-radius: 10px;
+    color: #fff;
 }
